--- a/index.html
+++ b/index.html
@@ -11,20 +11,37 @@
     content="Una de las mejores tiendas virtuales donde te ofrecemos lo mejor para tu ordenador, sin importar si eres o no gamer, podrás obtener los mejor al mejor precio y ofertas" />
   <meta name="author" content="AndresV" />
   <link rel="shortcut icon" href="assets/images/HeyGamersLogo.png" type="image/x-icon" />
+
+
+  <!-- links para el diseño del reveal JS -->
+  <!-- **Esta comentada para que afecte los otros estilos propios de la página -->
+  <!-- <link rel="stylesheet" href="dist/reset.css"> -->
+  <link rel="stylesheet" href="dist/reveal.css">
+  <link rel="stylesheet" href="dist/theme/moon.css">
+
+  <!-- Theme used for syntax highlighted code -->
+  <link rel="stylesheet" href="plugin/highlight/monokai.css">
+
   <!-- CSS Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="CSS/estilos.css" />
 
+  <!-- Fonts' google -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet" />
 
-  <!-- https://material.io/resources/icons/?style=outline -->
+  <!-- Estilos propios de CSS -->
+  <link rel="stylesheet" href="CSS/estilos.css" />
+
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
+
+  <!-- usando una CDN para el uso de animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
-<body>
+<body class="body">
   <header class="header">
     <!-- Se usa un navbar de boostrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,23 +68,24 @@
                 Productos
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li> <a class="dropdown-item" href="/accesorios_html/accesorios.html"> <span
+                <!-- Aquí se le aplican los estilos animados de animate.style -->
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
                       class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item" href="/componentes_html/componentes.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
                       class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item" href="/ordenadores_html/ordenadores.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
                       class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item" href="/perifericos_html/perifericos.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
                       class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -81,10 +99,39 @@
     </nav>
   </header>
 
-  <div class="contenedor">
-    <div class="logo">
-      <a href="/index.html" class="placeLogo"><img src="assets/images/HeyGamersLogo.png" alt="Logo" title="Inicio" /></a>
+
+  <div class="reveal">
+    <div class="slides">
+      <section> <img src="assets/images/HeyGamersLogo.png" alt="Logo" title="Inicio" />
+        <p class="reveal__info">Conoce más de nuestros de productos!!</p>
+      </section>
+      <section>
+        <section>
+          <img src="/assets/images/silla_aerocool_negro.jpg" alt="silla_aerocool_negro">
+        </section>
+        <section data-transition="concave">
+          <img class="reveal__img2" src="/assets/images/silla_ejecutiva_repaldar_alto.jpg" alt="silla_ejecutiva_repaldar_alto">
+        </section>
+        <section>
+          <img src="/assets/images/Silla_Gaming_Riotoro_RGB.jpg" alt="Silla_Gaming_Riotoro_RGB">
+        </section>
+
+      </section>
+
+      <section>
+        <section data-transition="fade">
+          <img src="/assets/images/mouse_HAVITT_MS1006_RGB.jpg" alt="mouse_HAVITT_MS1006_RGB">
+        </section>
+        <section>
+          <img src="/assets/images/mousepad_REDRAGON_RGB.jpg" alt="mousepad_REDRAGON_RGB">
+        </section>
+      </section>
+      <section> <img src="/assets/images/pc_novedades.jpg" alt="pc_novedades"></section>
     </div>
+  </div>
+
+
+  <div class="contenedor">
 
     <div class="contenido1 letra">
       <h1 class="titulo">Que hacemos..</h1>
@@ -98,35 +145,6 @@
         mencionar "gamer", no creas que solo se trata de eso, tenemos
         accesorios y todo relacionado a computadoras empresariales o básicas!!
       </p>
-      <div id="carousel1" class="carousel slide carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/assets/images/silla_aerocool_negro.jpg" alt="silla_aerocool_negro" />
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/images/pc_novedades.jpg" alt="pc" />
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/images/pc_oferta.jpg" alt="pc_gamer" />
-          </div>
-        </div>
-
-        <!--Controles NEXT y PREV-->
-        <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-        <!--Controles de indicadores-->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel1" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel1" data-slide-to="1"></li>
-          <li data-target="#carousel1" data-slide-to="2"></li>
-        </ol>
-      </div>
     </div>
 
     <div class="contenido2 letra">
@@ -167,7 +185,7 @@
     <!-- Fin div contenedor -->
   </div>
 
-  <!-- JS necesario para el comportamiento -->
+  <!-- JS necesario para el comportamiento del carrusel-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -182,6 +200,23 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+
+  <!-- Script para el uso de las funciones -->
+  <script src="/JS/index.js"></script>
+
+  <!-- Scripts para el uso de reveal JS -->
+  <script src="dist/reveal.js"></script>
+  <script src="plugin/notes/notes.js"></script>
+  <script src="plugin/markdown/markdown.js"></script>
+  <script src="plugin/highlight/highlight.js"></script>
+  <script>
+    Reveal.initialize({
+      hash: true,
+      plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+      hideInactiveCursor: true,
+      autoSlide: 5000
+    });
+  </script>
 
 </body>
 
