--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -23,6 +23,8 @@
   <!-- https://material.io/resources/icons/?style=outline -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
 
+  <!-- usando una CDN para el uso de animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -50,23 +52,24 @@
               </a>
 
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li> <a class="dropdown-item" href="/accesorios_html/accesorios.html"> <span
+                <!-- Aquí se le aplican los estilos animados de animate.style -->
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
                       class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item" href="/componentes_html/componentes.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
                       class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item" href="/ordenadores_html/ordenadores.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
                       class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item" href="/perifericos_html/perifericos.html"><span
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
                       class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
