--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
   <meta name="author" content="AndresV" />
   <link rel="shortcut icon" href="assets/images/HeyGamersLogo.png" type="image/x-icon" />
 
-
   <!-- links para el diseño del reveal JS -->
-  <!-- **Esta comentada para que afecte los otros estilos propios de la página -->
-  <!-- <link rel="stylesheet" href="dist/reset.css"> -->
   <link rel="stylesheet" href="dist/reveal.css">
   <link rel="stylesheet" href="dist/theme/moon.css">
 
@@ -69,23 +66,24 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <!-- Aquí se le aplican los estilos animados de animate.style -->
-                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
-                      class="material-icons-outlined">
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/accesorios_html/accesorios.html"> <span class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/componentes_html/componentes.html"><span class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/ordenadores_html/ordenadores.html"><span class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/perifericos_html/perifericos.html"><span class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -110,12 +108,12 @@
           <img src="/assets/images/silla_aerocool_negro.jpg" alt="silla_aerocool_negro">
         </section>
         <section data-transition="concave">
-          <img class="reveal__img2" src="/assets/images/silla_ejecutiva_repaldar_alto.jpg" alt="silla_ejecutiva_repaldar_alto">
+          <img class="reveal__img2" src="/assets/images/silla_ejecutiva_repaldar_alto.jpg"
+            alt="silla_ejecutiva_repaldar_alto">
         </section>
         <section>
           <img src="/assets/images/Silla_Gaming_Riotoro_RGB.jpg" alt="Silla_Gaming_Riotoro_RGB">
         </section>
-
       </section>
 
       <section>
@@ -164,6 +162,13 @@
 
       <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="assets/images/instagram.png"
           alt="instagramLogo" title="Nuestro Instagram" /></a>
+
+      <div id="corazon-btn" class="corazon-btn">
+        <div id="contenido" class="contenido">
+          <span id="corazon" class="corazon"></span>
+          <span id="text" class="text">Like</span>
+        </div>
+      </div>
     </aside>
 
     <footer class="footer">
@@ -185,24 +190,8 @@
     <!-- Fin div contenedor -->
   </div>
 
-  <!-- JS necesario para el comportamiento del carrusel-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-
-  <!-- Menu responsive -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-    crossorigin="anonymous"></script>
-
   <!-- Script para el uso de las funciones -->
-  <script src="/JS/index.js"></script>
+  <script src="/JS/funtions.js" type="text/javaScript" async></script>
 
   <!-- Scripts para el uso de reveal JS -->
   <script src="dist/reveal.js"></script>
@@ -217,7 +206,6 @@
       autoSlide: 5000
     });
   </script>
-
 </body>
 
 </html>
