--- a/sillas_html/sillas.html
+++ b/sillas_html/sillas.html
@@ -22,6 +22,9 @@
 
   <!-- https://material.io/resources/icons/?style=outline -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
+
+  <!-- CDN para la biblioteca AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -102,7 +105,7 @@
       </a>
     </div>
 
-    <div class="contenido2 letra">
+    <div data-aos="flip-up" class="contenido2 letra">
       <!--producto 2 sillas -->
       <a href="producto2silla.html">
         <figure>
@@ -118,7 +121,7 @@
       </a>
     </div>
 
-    <div class="contenido3 letra">
+    <div data-aos="fade-left" class="contenido3 letra">
       <!--producto 3 SIllas -->
       <a href="producto3silla.html">
         <figure>
@@ -133,7 +136,7 @@
       </a>
     </div>
 
-    <div class="contenido4 letra">
+    <div data-aos="fade-right" class="contenido4 letra">
         <!--producto 4 sillas -->
         <a href="producto4silla.html">
           <figure>
@@ -148,7 +151,7 @@
         </a>
     </div>
 
-    <div class="contenido5 letra">
+    <div data-aos="flip-up" class="contenido5 letra">
        <!--producto 5 sillas -->
       <a href="producto5silla.html">
         <figure>
@@ -164,7 +167,7 @@
       </a>
     </div>
 
-    <div class="contenido6 letra">
+    <div data-aos="fade-left" class="contenido6 letra">
       <!--producto 6 Sillas -->
       <a href="producto6silla.html">
         <figure>
@@ -179,7 +182,7 @@
       </a>
     </div>
 
-    <footer class="footer">
+    <footer data-aos="flip-up" class="footer">
       <h2>Información</h2>
       <p class="letra">
         Si desea mas información puede contactarnos al correo:
@@ -203,6 +206,8 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 
+    <!-- Scripts para AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
