--- a/componentes_html/componentes.html
+++ b/componentes_html/componentes.html
@@ -25,6 +25,9 @@
 
   <!-- usando una CDN para el uso de animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- CDN para la biblioteca AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,23 +55,24 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <!-- Aquí se le aplican los estilos animados de animate.style -->
-                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
-                      class="material-icons-outlined">
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/accesorios_html/accesorios.html"> <span class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/componentes_html/componentes.html"><span class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/ordenadores_html/ordenadores.html"><span class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/perifericos_html/perifericos.html"><span class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -106,7 +110,7 @@
       </a>
     </div>
 
-    <div class="contenido2 letra">
+    <div data-aos="flip-up" class="contenido2 letra">
       <!--producto 2 Componentes -->
       <a href="producto2componentes.html">
         <figure>
@@ -123,7 +127,7 @@
       </a>
     </div>
 
-    <div class="contenido3 letra">
+    <div data-aos="fade-left" class="contenido3 letra">
       <!--producto 3 componentes -->
       <a href="producto3componentes.html">
         <figure>
@@ -138,7 +142,7 @@
       </a>
     </div>
 
-    <div class="contenido4 letra">
+    <div data-aos="fade-right" class="contenido4 letra">
       <!--producto 4 componentes -->
       <a href="producto4componentes.html">
         <figure>
@@ -153,7 +157,7 @@
       </a>
     </div>
 
-    <div class="contenido5 letra">
+    <div data-aos="flip-up" class="contenido5 letra">
       <!--producto 5 Componentes -->
       <a href="producto5componentes.html">
         <figure>
@@ -168,7 +172,7 @@
       </a>
     </div>
 
-    <div class="contenido6 letra">
+    <div data-aos="fade-left" class="contenido6 letra">
       <!--producto 6 Componentes -->
       <a href="producto6componentes.html">
         <figure>
@@ -183,7 +187,7 @@
       </a>
     </div>
 
-    <footer class="footer">
+    <footer data-aos="flip-up" class="footer">
       <h2>Información</h2>
       <p class="letra">
         Si desea mas información puede contactarnos al correo:
@@ -207,6 +211,8 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 
+  <!-- Scripts para AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
