--- a/perifericos_html/perifericos.html
+++ b/perifericos_html/perifericos.html
@@ -210,6 +210,10 @@
 
   <!-- Scripts para AOS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
