--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
   <meta name="author" content="AndresV" />
   <link rel="shortcut icon" href="assets/images/HeyGamersLogo.png" type="image/x-icon" />
 
-  <!-- links para el diseño del reveal JS -->
-  <link rel="stylesheet" href="dist/reveal.css">
-  <link rel="stylesheet" href="dist/theme/moon.css">
-
-  <!-- Theme used for syntax highlighted code -->
-  <link rel="stylesheet" href="plugin/highlight/monokai.css">
-
   <!-- CSS Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
 
   <!-- Fonts' google -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,6 +30,13 @@
   <!-- usando una CDN para el uso de animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+  <!-- links para el diseño del reveal JS -->
+  <link rel="stylesheet" href="dist/reveal.css">
+  <link rel="stylesheet" href="dist/theme/moon.css">
+
+  <!-- Theme used for syntax highlighted code -->
+  <link rel="stylesheet" href="plugin/highlight/monokai.css">
+
 </head>
 
 <body class="body">
@@ -43,10 +44,8 @@
     <!-- Se usa un navbar de boostrap -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <!-- Se agregan los enlaces -->
         <a class="navbar-brand" href="/index.html"><img src="/assets/images/HeyGamersLogo.png" alt="logo"
             class="logoNav"></a>
-        <!-- El boton para el dropdown -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,7 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/quienes_somos.html">Quienes somos</a>
@@ -189,6 +188,11 @@
     </footer>
     <!-- Fin div contenedor -->
   </div>
+
+  <!-- Menu responsive -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
 
   <!-- Script para el uso de las funciones -->
   <script src="/JS/funtions.js" type="text/javaScript" async></script>
