--- a/accesorios_html/producto1accesorio.html
+++ b/accesorios_html/producto1accesorio.html
@@ -52,23 +52,24 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <!-- Aquí se le aplican los estilos animados de animate.style -->
-                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
-                      class="material-icons-outlined">
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/accesorios_html/accesorios.html"> <span class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/componentes_html/componentes.html"><span class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/ordenadores_html/ordenadores.html"><span class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/perifericos_html/perifericos.html"><span class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -82,36 +83,48 @@
     </nav>
   </header>
 
-  <div class="contenedor">
+  <!-- Contenedor de la imagen más grande del producto oculta -->
+  <div class="imgBig" id="imgBig">
+    <img onclick="closeImg();" class="img" src="/assets/images/hdmi_3m.jpg" alt="Cable Hdmi">
+    <button onclick="closeImg();" id="imgBig__btn" class="imgBig__btn"><span class="material-icons-outlined">
+        cancel
+      </span> </button>
+  </div>
+
+  <div id="contenedor" class="contenedor">
     <div class="logo">
       <a href="/index.html" class="placeLogo"><img src="/assets/images/HeyGamersLogo.png" alt="Logo"
           title="Inicio" /></a>
     </div>
 
     <div class="contenido1 letra">
-      <figure><img src="/assets/images/hdmi_3m.jpg" alt="Cable hmdi"></figure>
+      <figure><img id="img" onclick="agrandarImg();" src="/assets/images/hdmi_3m.jpg" alt="Cable hmdi"></figure>
     </div>
 
     <div class="contenido2 letra">
       <section>
         <h1>CABLE HDMI 3M</h1>
         <ul>
-          <li><span
-            class="material-icons-outlined">
-            cable
-          </span><p>Estado: Producto nuevo</p></li>
-          <li><span
-            class="material-icons-outlined">
-            cable
-          </span><p>Longitud 15.6in [39.5 cm]</p></li>
-          <li><span
-            class="material-icons-outlined">
-            cable
-          </span><p>Peso: 8.3oz [236.0 g]</p></li>
-          <li><span
-            class="material-icons-outlined">
-            cable
-          </span><p>Precio: ₡ 2,500</p></li>
+          <li><span class="material-icons-outlined">
+              cable
+            </span>
+            <p>Estado: Producto nuevo</p>
+          </li>
+          <li><span class="material-icons-outlined">
+              cable
+            </span>
+            <p>Longitud 15.6in [39.5 cm]</p>
+          </li>
+          <li><span class="material-icons-outlined">
+              cable
+            </span>
+            <p>Peso: 8.3oz [236.0 g]</p>
+          </li>
+          <li><span class="material-icons-outlined">
+              cable
+            </span>
+            <p>Precio: ₡ 2,500</p>
+          </li>
         </ul>
       </section>
     </div>
@@ -140,6 +153,7 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 
+    <script src="/JS/funtions.js" type="text/javaScript" async></script>
 </body>
 
 </html>
