--- a/componentes_html/producto2componentes.html
+++ b/componentes_html/producto2componentes.html
@@ -82,14 +82,23 @@
     </nav>
   </header>
 
-  <div class="contenedor">
+  <!-- Contenedor de la imagen más grande del producto oculta -->
+  <div class="imgBig" id="imgBig">
+    <img onclick="closeImg();" class="img" src="/assets/images/enfriamiento_BE_QUIET_PURE_LOOP.jpg"
+      alt="Enfriamiento liquido BE QUIET">
+    <button onclick="closeImg();" id="imgBig__btn" class="imgBig__btn"><span class="material-icons-outlined">
+        cancel
+      </span> </button>
+  </div>
+
+  <div id="contenedor" class="contenedor">
     <div class="logo">
       <a href="/index.html" class="placeLogo"><img src="/assets/images/HeyGamersLogo.png" alt="Logo"
           title="Inicio" /></a>
     </div>
 
     <div class="contenido1 letra">
-      <figure><img src="/assets/images/enfriamiento_BE_QUIET_PURE_LOOP.jpg" alt="Enfriamiento liquido BE QUIET">
+      <figure><img onclick="agrandarImg();" src="/assets/images/enfriamiento_BE_QUIET_PURE_LOOP.jpg" alt="Enfriamiento liquido BE QUIET">
       </figure>
     </div>
 
@@ -173,6 +182,7 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 
+    <script src="/JS/funtions.js" type="text/javaScript" async></script>
 </body>
 
 </html>
