JS agrandar imagen completo

--- a/perifericos_html/producto2perifericos.html
+++ b/perifericos_html/producto2perifericos.html
@@ -52,23 +52,24 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <!-- Aquí se le aplican los estilos animados de animate.style -->
-                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
-                      class="material-icons-outlined">
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/accesorios_html/accesorios.html"> <span class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/componentes_html/componentes.html"><span class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/ordenadores_html/ordenadores.html"><span class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/perifericos_html/perifericos.html"><span class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -82,14 +83,22 @@
     </nav>
   </header>
 
-  <div class="contenedor">
+  <!-- Contenedor de la imagen más grande del producto oculta -->
+  <div class="imgBig" id="imgBig">
+    <img onclick="closeImg();" class="img" src="/assets/images/teclado_mouse_oferta.jpg" alt="teclado_mouse_oferta">
+    <button onclick="closeImg();" id="imgBig__btn" class="imgBig__btn"><span class="material-icons-outlined">
+        cancel
+      </span> </button>
+  </div>
+
+  <div id="contenedor" class="contenedor">
     <div class="logo">
       <a href="/index.html" class="placeLogo"><img src="/assets/images/HeyGamersLogo.png" alt="Logo"
           title="Inicio" /></a>
     </div>
 
     <div class="contenido1 letra">
-      <figure><img src="/assets/images/teclado_mouse_oferta.jpg" alt="teclado_mouse_oferta"></figure>
+      <figure><img onclick="agrandarImg();" src="/assets/images/teclado_mouse_oferta.jpg" alt="teclado_mouse_oferta"></figure>
     </div>
 
     <div class="contenido2 letra">
@@ -153,6 +162,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+
+  <script src="/JS/funtions.js" type="text/javaScript" async></script>
 
 </body>
 
