--- a/perifericos_html/producto1perifericos.html
+++ b/perifericos_html/producto1perifericos.html
@@ -82,14 +82,23 @@
     </nav>
   </header>
 
-  <div class="contenedor">
+  
+  <!-- Contenedor de la imagen más grande del producto oculta -->
+  <div class="imgBig" id="imgBig">
+    <img onclick="closeImg();" class="img" src="/assets/images/mouse_HAVITT_MS1006_RGB.jpg" alt="mouse_HAVITt">
+    <button onclick="closeImg();" id="imgBig__btn" class="imgBig__btn"><span class="material-icons-outlined">
+        cancel
+      </span> </button>
+  </div>
+
+  <div id="contenedor" class="contenedor">
     <div class="logo">
       <a href="/index.html" class="placeLogo"><img src="/assets/images/HeyGamersLogo.png" alt="Logo"
           title="Inicio" /></a>
     </div>
 
     <div class="contenido1 letra">
-      <figure><img src="/assets/images/mouse_HAVITT_MS1006_RGB.jpg" alt="mouse_HAVITt"></figure>
+      <figure><img onclick="agrandarImg();" src="/assets/images/mouse_HAVITT_MS1006_RGB.jpg" alt="mouse_HAVITt"></figure>
     </div>
 
     <div class="contenido2 letra">
@@ -149,6 +158,7 @@
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
 
-</body>
+    <script src="/JS/funtions.js" type="text/javaScript" async></script>
 
+</body>
 </html>
