--- a/sillas_html/producto4silla.html
+++ b/sillas_html/producto4silla.html
@@ -52,23 +52,24 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <!-- Aquí se le aplican los estilos animados de animate.style -->
-                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/accesorios_html/accesorios.html"> <span
-                      class="material-icons-outlined">
+                <li> <a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/accesorios_html/accesorios.html"> <span class="material-icons-outlined">
                       cable
                     </span> Accesorios</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/componentes_html/componentes.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/componentes_html/componentes.html"><span class="material-icons-outlined">
                       smart_button
                     </span> Componentes</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/ordenadores_html/ordenadores.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/ordenadores_html/ordenadores.html"><span class="material-icons-outlined">
                       computer
                     </span> Ordenadores</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/perifericos_html/perifericos.html"><span
-                      class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/perifericos_html/perifericos.html"><span class="material-icons-outlined">
                       headset_mic
                     </span> Periféricos</a></li>
-                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2" href="/sillas_html/sillas.html"><span class="material-icons-outlined">
+                <li><a class="dropdown-item animate__animated animate__shakeX animate__repeat-2"
+                    href="/sillas_html/sillas.html"><span class="material-icons-outlined">
                       event_seat
                     </span> Sillas</a></li>
               </ul>
@@ -82,41 +83,60 @@
     </nav>
   </header>
 
-  <div class="contenedor">
+  <!-- Contenedor de la imagen más grande del producto oculta -->
+  <div class="imgBig" id="imgBig">
+    <img onclick="closeImg();" class="img" src="/assets/images/Silla_XTECH_ejecutiva.png" alt="silla_ejecutiva_xtech">
+    <button onclick="closeImg();" id="imgBig__btn" class="imgBig__btn"><span class="material-icons-outlined">
+        cancel
+      </span> </button>
+  </div>
+
+  <div id="contenedor" class="contenedor">
     <div class="logo">
       <a href="/index.html" class="placeLogo"><img src="/assets/images/HeyGamersLogo.png" alt="Logo"
           title="Inicio" /></a>
     </div>
 
     <div class="contenido1 letra">
-      <figure><img src="/assets/images/Silla_XTECH_ejecutiva.png" alt="silla_ejecutiva_xtech"></figure>
+      <figure><img onclick="agrandarImg();" src="/assets/images/Silla_XTECH_ejecutiva.png" alt="silla_ejecutiva_xtech">
+      </figure>
     </div>
 
     <div class="contenido2 letra">
       <section>
-  
+
 
         <h1>Silla XTECH ejecutiva con reposabrazo</h1>
         <ul>
           <li><span class="material-icons-outlined">
-            event_seat
-          </span><p>Materiales: Plástico: 35%, Tela: 25%, Espuma: 10%, Metal: 20% </p></li>
+              event_seat
+            </span>
+            <p>Materiales: Plástico: 35%, Tela: 25%, Espuma: 10%, Metal: 20% </p>
+          </li>
           <li><span class="material-icons-outlined">
-            event_seat
-          </span><p>Soporta hasta 100Kg de peso</p></li>
+              event_seat
+            </span>
+            <p>Soporta hasta 100Kg de peso</p>
+          </li>
           <li><span class="material-icons-outlined">
-            event_seat
-          </span><p>El complemento perfecto para la oficina en el hogar, la sala de estudio y de conferencias</p></li>
+              event_seat
+            </span>
+            <p>El complemento perfecto para la oficina en el hogar, la sala de estudio y de conferencias</p>
+          </li>
           <li><span class="material-icons-outlined">
-            event_seat
-          </span><p>Altura ajustable de hasta 101,5cm</p></li>
+              event_seat
+            </span>
+            <p>Altura ajustable de hasta 101,5cm</p>
+          </li>
           <li><span class="material-icons-outlined">
-            event_seat
-          </span><p>Precio: ₡66,000</p></li>
+              event_seat
+            </span>
+            <p>Precio: ₡66,000</p>
+          </li>
         </ul>
       </section>
-      </div>
-      
+    </div>
+
     <footer class="footer">
       <h2>Información</h2>
       <p class="letra">
@@ -140,6 +160,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+
+  <script src="/JS/funtions.js" type="text/javaScript" async></script>
 
 </body>
 
